chuwi first added file

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,8 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=lost_found
 DB_USER=postgres
-DB_PASSWORD=your_password
+DB_USER=postgres
+DB_PASSWORD=postgres
 
 # Secret Key for Flask sessions
 SECRET_KEY=your-secret-key-change-in-production
