--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,43 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Flask
+instance/
+.webassets-cache
+
 # Environment variables
 .env
-.venv
-venv/
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-.Python
+.env.local
+.env.*.local
 
 # Database
 *.db
 *.sqlite
 *.sqlite3
-instance/
+instance/lost_found.db
+lost_found.db
 
 # IDE
 .vscode/
@@ -25,10 +50,5 @@ instance/
 .DS_Store
 Thumbs.db
 
-# Flask
-instance/
-.webassets-cache
-
 # Logs
 *.log
-
